# mochaccino

./: .bashrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  logo.txt
.config/Code/User/: settings.json
.config/Thunar/: accels.scm
.config/VSCodium/User/: settings.json
.config/dunst/: dunstrc
.config/fastfetch/: config.jsonc
.config/fish/: fish_variables  user.fish
.config/fish/conf.d/: 02-colors.fish
.config/fish/scripts/: link-cleaner.py
.config/godot/: editor_settings-4.5.tres
.config/gtk-3.0/: bookmarks  colors.css  settings.ini
.config/gtk-4.0/: settings.ini
.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/hypr/conf/: input.conf  keybinds.conf  windowrules.conf
.config/hypr/scripts/: start-hyprland.sh
.config/kitty/: kitty.conf
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf
.config/waybar/: style.css
.config/wlogout/: layout  style.css
dotfiles/: .bashrc
dotfiles/.config/dotsynk/scripts/: pyproject.toml
dotfiles/.config/dotsynk/scripts/py/: dnsq.py  link-cleaner.py
dotfiles_sync/: config.py  file_sync.py  gitignore.py  ignore.py  main.py  pyproject.toml  sync.toml
fastfetch/: skull.txt
fish/: config.fish  fish_variables
hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
install/: _dotfiles.sh  _finish.sh  _flatpaks.sh  _lib.sh  _mirrors.sh  _nvidia.sh  _optional.sh  _sddm.sh  _services.sh  _system.sh  _yay.sh  install.sh  pkgs.sh  uninstall.sh
kitty/: hyde.conf
python/dotfiles_sync/: config.py  file_sync.py  gitignore.py  main.py  pyproject.toml
qt5ct/: colors.conf  qt5ct.conf
qt6ct/: qt6ct.conf
theme_engine_wip/templates/: dunstrc.tmpl  fish-colors.fish.tmpl  hyprland-colors.conf.tmpl  hyprlock.conf.tmpl  kitty-colors.conf.tmpl  rofi-colors.rasi.tmpl  waybar-colors.css.tmpl  wlogout-style.css.tmpl
waybar/: style.css
(+98 files in other folders)
