[project]
name = "dotsynk-scripts"
version = "0.1.0rc"
description = "Python script suite for dotsynk."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pyperclip>=1.11.0",
]

[dependency-groups]
dev = [
  "hypothesis>=6.152.4",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ssort>=0.16.0",
  "ty>=0.0.34",
  "taplo>=0.9.3",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
src = ["./py"]
target-version = "py314"
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "INP001", # implicit-namespace-package (no module docstrings for now)
  "D100",   # undocumented-public-module (same here)
  "D104",   # undocumented-public-package (same here)
  "ERA001", # commented-out-code
  "TD003",  # missing-todo-link (TODOs aren't tied to issues (yet))
  "FIX002", # line-contains-todo
  "COM812", # missing-trailing-comma (formatter conflict)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 160

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 20
max-returns = 6
max-statements = 60

[tool.ty.environment]
root = ["."]
python-version = "3.14"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "warn"

[tool.taplo]
include = ["pyproject.toml"]

[[tool.taplo.rule]]
include = ["pyproject.toml"]
keys = ["dependencies", "*-dependencies"]

[tool.taplo.rule.formatting]
reorder_keys = true
